add new task function

--- a/styles.css
+++ b/styles.css
@@ -311,3 +311,9 @@ input[type="checkbox"]:checked + label:after{
 .new-task-buttons button:focus{  
 	outline: 0;
 }
+
+.errorMessage{
+	padding: 10px;
+	color: #bb0b0b;
+	display: none;
+}
